Fixed board being pushed down upon smaller screens

--- a/style.css
+++ b/style.css
@@ -32,19 +32,15 @@ html {
 /*-------------------------Game Board--------------------------*/
 #board {
   margin: 0 auto;
-  min-width: 80%;
-  max-width: 90%;
+  width: 85%;
   height: 600px;
   transition: transform 500ms ease-in-out 100ms;
-  display: none; }
+  display: none;
+  flex-flow: row wrap;
+  justify-content: center; }
   #board h3 {
-    text-align: center; }
-  #board #drawingBoard {
-    width: 100%;
-    height: 90%;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center; }
+    text-align: center;
+    width: 100%; }
 
 .item {
   min-width: 300px;
